<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/ic_photo" />

    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imageViewProfile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field"
        />

    <EditText
        android:id="@+id/editTextSentence"
        android:hint="@string/enter_sentence"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editTextName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/field"
        />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editTextSentence"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/check" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCheck"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next" />
</RelativeLayout>
