<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="start"
            android:background="@drawable/arrow"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/second_screen"
            android:textAppearance="@style/title" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        android:lineSpacingExtra="9sp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textViewShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/showname"
        android:lineSpacingExtra="9sp"
        android:layout_below="@id/textViewWelcome"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textViewSelectedUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/selected_us"
        android:lineSpacingExtra="0sp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnChooseUser"
        android:text="@string/choose_a_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"/>
</RelativeLayout>
